--- a/index.html
+++ b/index.html
@@ -872,347 +872,93 @@
     </div>
 
 <script>
-  document.addEventListener("DOMContentLoaded", () => {
-    document.querySelectorAll('[data-parent="fame"]').forEach((el) => {
-      if (!el.dataset.fame && el.id?.startsWith("fame-")) {
-        el.dataset.fame = el.id.replace("fame-", "");
-      }
-    });
+ document.addEventListener("DOMContentLoaded", () => {
+  const welcomeBtn = document.getElementById("welcomeBtn");
+  const welcomeModal = document.getElementById("welcomeModal");
+  const mainContent = document.getElementById("mainContent");
+  const searchInput = document.getElementById("searchInput");
+  const searchInfo = document.getElementById("searchInfo");
+  const contentArea = document.getElementById("contentArea");
+  const allItems = document.querySelectorAll(".list-item");
 
-    const welcomeBtn = document.getElementById("welcomeBtn");
-    const welcomeModal = document.getElementById("welcomeModal");
-    const mainContent = document.getElementById("mainContent");
-    const tabsMain = document.querySelectorAll(".tabs-main button");
-    const tabsFame = document.querySelectorAll(".tabs-fame button");
-    const allLists = document.querySelectorAll(".list");
-    const fameTabsWrapper = document.querySelector(".tabs-fame-wrapper");
-    const searchInput = document.getElementById("searchInput");
-    const searchInfo = document.getElementById("searchInfo");
+  // Показ основного контента после нажатия "Начать"
+  welcomeBtn.onclick = () => {
+    welcomeModal.style.display = "none";
+    mainContent.style.display = "block";
+    searchInput.focus();
+  };
 
-    let activeMain = "fame",
-        activeFame = "big";
+  // Поиск
+  searchInput.oninput = () => {
+    const q = searchInput.value.toLowerCase().trim();
+    contentArea.innerHTML = "";
+    searchInfo.textContent = "";
 
-    welcomeBtn.onclick = () => {
-      welcomeModal.style.display = "none";
-      mainContent.style.display = "block";
-      searchInput.focus();
-      updateLists();
-    };
+    if (!q) return;
 
-    tabsMain.forEach((btn) => {
-      btn.onclick = () => {
-        if (btn.dataset.tab !== activeMain) {
-          tabsMain.forEach((b) => b.classList.remove("active"));
-          btn.classList.add("active");
-          activeMain = btn.dataset.tab;
-          fameTabsWrapper.style.display = activeMain === "fame" ? "block" : "none";
-          searchInput.value = "";
-          searchInfo.textContent = "";
-          updateLists();
-        }
-      };
-    });
+    const foundItems = Array.from(allItems).filter(item =>
+      item.textContent.toLowerCase().includes(q)
+    );
 
-    tabsFame.forEach((btn) => {
-      btn.onclick = () => {
-        if (btn.dataset.fame !== activeFame) {
-          tabsFame.forEach((b) => b.classList.remove("active"));
-          btn.classList.add("active");
-          activeFame = btn.dataset.fame;
-          searchInput.value = "";
-          searchInfo.textContent = "";
-          updateLists();
-        }
-      };
-    });
-
-    function updateLists() {
-      allLists.forEach((list) => {
-        const parent = list.dataset.parent;
-        const fameType = list.dataset.fame;
-        const show =
-          (activeMain === "fame" && parent === "fame" && fameType === activeFame) ||
-          (parent === activeMain && activeMain !== "fame");
-
-        list.style.display = show ? "block" : "none";
-      });
+    if (foundItems.length === 0) {
+      contentArea.innerHTML = `<p style="color:#f88;">Ничего не найдено</p>`;
+      return;
     }
 
-    searchInput.oninput = () => {
-      const q = searchInput.value.toLowerCase().trim();
-      const contentArea = document.getElementById("contentArea");
+    const wrapper = document.createElement("div");
+    wrapper.className = "list";
+    wrapper.style.display = "block";
 
-      if (!q) {
-        fameTabsWrapper.style.display = activeMain === "fame" ? "block" : "none";
-        updateLists();
-        searchInfo.textContent = "";
-        return;
-      }
-
-      contentArea.innerHTML = "";
-      const sections = {};
-
-      allLists.forEach((list) => {
-        list.querySelectorAll(".list-item").forEach((item) => {
-          if (item.textContent.toLowerCase().includes(q)) {
-            const parent = list.dataset.parent;
-            if (!sections[parent]) sections[parent] = [];
-            sections[parent].push(item.cloneNode(true));
-          }
-        });
-      });
-
-      if (Object.keys(sections).length === 0) {
-        contentArea.innerHTML = <p style="color:#f88;">Ничего не найдено</p>;
-        searchInfo.textContent = "";
-        return;
-      }
-
-      const foundNames = [];
-      for (const [parent, items] of Object.entries(sections)) {
-        let title =
-          parent === "fame"
-            ? "Все личности"
-            : parent === "scam"
-            ? "Скам"
-            : parent === "beggars"
-            ? "Бомжи"
-            : parent;
-
-        const h2 = document.createElement("h2");
-        h2.textContent = Секция: ${title};
-        h2.style.cssText = "margin:20px 0 10px;color:#b783ff;";
-        contentArea.appendChild(h2);
-
-        const wrapper = document.createElement("div");
-        wrapper.className = "list";
-        wrapper.style.display = "block";
-
-        items.forEach((it) => {
-          it.style.display = "flex";
-          wrapper.appendChild(it);
-        });
-        contentArea.appendChild(wrapper);
-
-        foundNames.push(title);
-      }
-
-      searchInfo.textContent = Найдено совпадений в секциях: ${foundNames.join(", ")};
-    };
-
-    document.body.addEventListener("click", (e) => {
-      const item = e.target.closest(".list-item");
-      if (!item) return;
-      const name = item.dataset.name;
-      const desc = item.dataset.desc;
-      const img =
-        item.dataset.img ||
-        "https://cdn-icons-png.flaticon.com/512/847/847969.png";
-      const modal = document.createElement("div");
-      modal.className = "modal-user";
-      modal.innerHTML = 
-      <div class="modal-content">
-        <img src="${img}" />
-        <h3>${name}</h3>
-        <p>${desc}</p>
-      </div>;
-      modal.onclick = () => modal.remove();
-      document.body.appendChild(modal);
+    foundItems.forEach(item => {
+      const clone = item.cloneNode(true);
+      clone.style.display = "flex";
+      wrapper.appendChild(clone);
     });
 
-    fameTabsWrapper.style.display = activeMain === "fame" ? "block" : "none";
-    updateLists();
+    contentArea.appendChild(wrapper);
+    searchInfo.textContent = `Найдено совпадений: ${foundItems.length}`;
+  };
 
-    const style = document.createElement("style");
-    style.textContent = 
-      #searchModal div::-webkit-scrollbar {
-        width: 8px;
-      }
-      #searchModal div::-webkit-scrollbar-thumb {
-        background-color: #8e2de2;
-        border-radius: 10px;
-      }
-      #searchModal div::-webkit-scrollbar-track {
-        background: #1a0033;
-      }
-      @keyframes fadeScaleIn {
-        from { opacity: 0; transform: scale(0.95); }
-        to { opacity: 1; transform: scale(1); }
-      }
-    ;
-    document.head.appendChild(style);
+  // Клик по юзеру — показать модалку
+  document.body.addEventListener("click", (e) => {
+    const item = e.target.closest(".list-item");
+    if (!item) return;
 
-    const searchModal = document.createElement("div");
-    searchModal.id = "searchModal";
-    searchModal.style.cssText = 
-      display: none;
-      position: fixed;
-      top: 0; left: 0;
-      width: 100vw; height: 100vh;
-      background: rgba(0, 0, 0, 0.6);
-      backdrop-filter: blur(12px);
-      z-index: 9999;
-      justify-content: center;
-      align-items: flex-start;
-      padding-top: 60px;
-      box-sizing: border-box;
-      font-family: 'Segoe UI', sans-serif;
-    ;
+    const name = item.dataset.name || "Без имени";
+    const desc = item.dataset.desc || "Без описания";
+    const img = item.dataset.img || "https://cdn-icons-png.flaticon.com/512/847/847969.png";
 
-    searchModal.innerHTML = 
-      <div style="
-        background: #140024;
-        border: 1px solid #8026ff;
-        border-radius: 18px;
-        padding: 24px;
-        width: 90%;
-        max-width: 850px;
-        max-height: 75vh;
-        overflow-y: auto;
-        box-shadow: 0 0 25px rgba(142, 45, 226, 0.4);
-        position: relative;
-        display: flex;
-        flex-direction: column;
-        gap: 16px;
-        min-height: 400px;
-        animation: fadeScaleIn 0.2s ease;
+    const modal = document.createElement("div");
+    modal.className = "modal-user";
+    modal.innerHTML = `
+      <div class="modal-content" style="
+        background:#1b0033;
+        padding:20px;
+        border-radius:12px;
+        max-width:400px;
+        color:#fff;
+        text-align:center;
+        box-shadow: 0 0 20px #8026ff;
       ">
-        <input id="searchInputModal" type="text" placeholder="🔍 Поиск по имени или описанию..." style="
-          width: 100%;
-          padding: 14px 18px;
-          font-size: 16px;
-          border-radius: 12px;
-          border: 1px solid #4e0a99;
-          outline: none;
-          background: #1b0033;
-          color: #fff;
-          box-shadow: 0 0 12px rgba(142, 45, 226, 0.2);
-          transition: border 0.2s;
-        " />
-        <div id="searchResults" style="
-          flex: 1;
-          overflow-y: auto;
-          display: flex;
-          flex-direction: column;
-          gap: 16px;
-          color: #ccc;
-          font-size: 15px;
-        ">
-          <p style="color:#666;">Введите текст для поиска...</p>
-        </div>
-      </div>
-
-      <button id="closeSearchModal" style="
-        position: fixed;
-        top: 20px;
-        right: 28px;
-        background: none;
-        border: none;
-        font-size: 26px;
-        color: #c47aff;
-        cursor: pointer;
-        z-index: 10000;
-        transition: transform 0.15s ease;
-      " title="Закрыть">✖</button>
-    ;
-    document.body.appendChild(searchModal);
-
-    const searchInputModal = document.getElementById("searchInputModal");
-    const resultsContainer = document.getElementById("searchResults");
-
-    searchInputModal.oninput = () => {
-      const q = searchInputModal.value.toLowerCase().trim();
-      resultsContainer.innerHTML = "";
-
-      if (!q) {
-        resultsContainer.innerHTML =
-          "<p style='color:#666;'>Введите текст для поиска...</p>";
-        return;
-      }
-
-      const allItems = document.querySelectorAll(".list-item");
-      const grouped = {};
-
-      allItems.forEach((item) => {
-        const name = item.dataset.name?.toLowerCase() || "";
-        const desc = item.dataset.desc?.toLowerCase() || "";
-        const parent = item.closest(".list")?.dataset.parent;
-        const fame = item.closest(".list")?.dataset.fame;
-
-        if ((name.includes(q) || desc.includes(q)) && parent) {
-          if (!grouped[parent]) grouped[parent] = {};
-          const fameKey = fame || "default";
-          if (!grouped[parent][fameKey]) grouped[parent][fameKey] = [];
-          grouped[parent][fameKey].push(item.cloneNode(true));
-        }
-      });
-
-      if (Object.keys(grouped).length === 0) {
-        resultsContainer.innerHTML =
-          "<p style='color:#555;'>🚫 Ничего не найдено...</p>";
-        return;
-      }
-
-      const fameNames = {
-        big: "💎 Большой фейм",
-        mid: "📣 Нормальный фейм",
-        small: "🎯 Мелкий фейм",
-        admin: "🛠️ Админы",
-        valid: "✅ Валиднутые",
-        abandoned: "☠️ Заброшенные",
-        coder: "👨‍💻 Кодеры",
-        default: "🔹 Без категории"
-      };
-
-      const parentNames = {
-        fame: "Личности",
-        scam: "Скам",
-        beggars: "Бомжи"
-      };
-
-      for (const [parent, fameGroups] of Object.entries(grouped)) {
-        const sectionTitle = document.createElement("h2");
-        sectionTitle.textContent = Секция: ${parentNames[parent] || parent};
-        sectionTitle.style.cssText = "margin:20px 0 10px;color:#b783ff;";
-        resultsContainer.appendChild(sectionTitle);
-
-        for (const [fameKey, items] of Object.entries(fameGroups)) {
-          const fameTitle = document.createElement("h3");
-          fameTitle.textContent = fameNames[fameKey] || fameKey;
-          fameTitle.style.cssText = "margin:10px 0 6px;color:#9f73ff;";
-          resultsContainer.appendChild(fameTitle);
-
-          const sectionWrapper = document.createElement("div");
-          sectionWrapper.className = "list";
-          sectionWrapper.style.display = "block";
-
-          items.forEach((item) => {
-            item.style.display = "flex";
-            sectionWrapper.appendChild(item);
-          });
-
-          resultsContainer.appendChild(sectionWrapper);
-        }
-      }
-    };
-
-    document.getElementById("closeSearchModal").onclick = () => {
-      searchModal.style.display = "none";
-      searchInputModal.value = "";
-      resultsContainer.innerHTML =
-        "<p style='color:#666;'>Введите текст для поиска...</p>";
-    };
-
-    if (searchInput) {
-      searchInput.addEventListener("click", () => {
-        searchModal.style.display = "flex";
-        searchInputModal.value = "";
-        resultsContainer.innerHTML =
-          "<p style='color:#666;'>Введите текст для поиска...</p>";
-        searchInputModal.focus();
-      });
-    }
+        <img src="${img}" style="width:100px;height:100px;border-radius:50%;object-fit:cover;" />
+        <h3 style="margin:12px 0;">${name}</h3>
+        <p>${desc}</p>
+      </div>`;
+    modal.style.cssText = `
+      position:fixed;
+      top:0;left:0;
+      width:100vw;height:100vh;
+      background:rgba(0,0,0,0.7);
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      z-index:9999;
+    `;
+    modal.onclick = () => modal.remove();
+    document.body.appendChild(modal);
   });
+});
+
 </script>
 
 </body>
