--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
       rel="stylesheet"
     />
     <style>
+
+#welcomeModal {
+  display: block;
+}
+
+#mainContent {
+  display: none;
+}
+      
       body {
         margin: 0;
         background: #1a002b;
