--- a/index.html
+++ b/index.html
@@ -880,17 +880,16 @@
       >
     </div>
 <script>
- document.addEventListener("DOMContentLoaded", () => {
+document.addEventListener("DOMContentLoaded", () => {
   const searchInput = document.getElementById("search");
   const searchInfo = document.querySelector(".search-info");
   const tabsMain = document.querySelectorAll(".tabs-main button");
   const fameTabsWrapper = document.querySelector(".tabs-fame-wrapper");
   const fameTabs = document.querySelectorAll(".tabs-fame button");
 
-  let activeMain = "fame";     // изначально активна вкладка "fame"
-  let activeFame = "big";      // и подкатегория "big"
+  let activeMain = "fame";
+  let activeFame = "big";
 
-  // обновление списка на основе текущей категории, подкатегории и поиска
   function updateLists() {
     const query = searchInput.value.trim().toLowerCase();
     const lists = document.querySelectorAll(".list");
@@ -898,13 +897,14 @@
 
     lists.forEach((list) => {
       const parent = list.dataset.parent;
-      const fame = list.dataset.fame;
+      const fame = list.dataset.fame || null;
+
       const isFameCategory = activeMain === "fame";
       const matchesMain = parent === activeMain;
       const matchesFame = fame === activeFame;
 
-      // показывать список только если он принадлежит активной категории
       let showList = false;
+
       if (isFameCategory && matchesMain && matchesFame) {
         showList = true;
       } else if (!isFameCategory && matchesMain) {
@@ -932,28 +932,17 @@
         }
       });
 
-      if (visibleCount > 0) {
-        list.style.display = "block";
-      } else {
-        list.style.display = "none";
-      }
-
+      list.style.display = visibleCount > 0 ? "block" : "none";
       totalVisible += visibleCount;
     });
 
-    // обновить инфо строку
-    if (query !== "") {
-      if (totalVisible > 0) {
-        searchInfo.textContent = `Найдено результатов: ${totalVisible}`;
-      } else {
-        searchInfo.textContent = "Ничего не найдено";
-      }
-    } else {
-      searchInfo.textContent = "";
-    }
+    searchInfo.textContent = query
+      ? totalVisible > 0
+        ? `Найдено результатов: ${totalVisible}`
+        : "Ничего не найдено"
+      : "";
   }
 
-  // обработка переключения главных вкладок
   tabsMain.forEach((btn) => {
     btn.addEventListener("click", () => {
       const target = btn.dataset.main;
@@ -962,18 +951,15 @@
       activeMain = target;
       activeFame = "big";
 
-      // стили кнопок
       tabsMain.forEach((b) => b.classList.remove("active"));
       btn.classList.add("active");
 
-      // показать/скрыть подкатегории
       fameTabsWrapper.style.display = target === "fame" ? "flex" : "none";
 
       fameTabs.forEach((f, i) => {
         f.classList.toggle("active", i === 0);
       });
 
-      // сброс поиска
       searchInput.value = "";
       searchInfo.textContent = "";
 
@@ -981,7 +967,6 @@
     });
   });
 
-  // обработка кликов по подкатегориям
   fameTabs.forEach((btn) => {
     btn.addEventListener("click", () => {
       const fame = btn.dataset.fame;
@@ -996,10 +981,8 @@
     });
   });
 
-  // поиск
   searchInput.addEventListener("input", updateLists);
 
-  // начальная отрисовка
   if (activeMain === "fame") {
     fameTabsWrapper.style.display = "flex";
   } else {
