--- a/index.html
+++ b/index.html
@@ -396,6 +396,18 @@
         <button data-tab="beggars">Бомжи</button>
       </div>
 
+
+      <div class="tabs-fame-wrapper">
+        <div class="tabs-fame">
+          <button class="active" data-fame="big">Большой фейм</button>
+          <button data-fame="normal">Нормальный фейм</button>
+          <button data-fame="small">Мелкий фейм</button>
+          <button data-fame="coders">Кодеры</button>
+          <button data-fame="admins">Админы</button>
+          <button data-fame="validated">Валиднутые</button>
+          <button data-fame="forgotten">Заброшенные</button>
+        </div>
+      </div>
       
 
       <div id="contentArea">
