--- a/index.html
+++ b/index.html
@@ -25,19 +25,28 @@
         font-family: "Orbitron", monospace, sans-serif;
       }
 
-      #welcomeModal {
-        position: fixed;
-        inset: 0;
-        background: rgba(20, 0, 50, 0.95);
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        text-align: center;
-        padding: 20px;
-        z-index: 9999;
-      }
+     #welcomeModal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 999;
+  background: #100018;
+  color: white;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  text-align: center;
+}
 
+
+#mainContent {
+  display: none;
+
+      
       #welcomeModal .emoji {
         font-size: 60px;
         display: inline-block;
