--- a/index.html
+++ b/index.html
@@ -396,7 +396,17 @@
         <button data-tab="beggars">Бомжи</button>
       </div>
 
-      
+      <div class="tabs-fame-wrapper">
+        <div class="tabs-fame">
+          <button class="active" data-fame="big">Большой фейм</button>
+          <button data-fame="normal">Нормальный фейм</button>
+          <button data-fame="small">Мелкий фейм</button>
+          <button data-fame="coders">Кодеры</button>
+          <button data-fame="admins">Админы</button>
+          <button data-fame="validated">Валиднутые</button>
+          <button data-fame="forgotten">Заброшенные</button>
+        </div>
+      </div>
 
       <div id="contentArea">
         <div class="list" id="fame-big" data-parent="fame">
@@ -877,10 +887,9 @@ document.addEventListener("DOMContentLoaded", () => {
   const fameTabsWrapper = document.querySelector(".tabs-fame-wrapper");
   const fameTabs = document.querySelectorAll(".tabs-fame button");
 
-  let activeMain = "fame";     // изначально активна вкладка "fame"
-  let activeFame = "big";      // и подкатегория "big"
+  let activeMain = "fame";
+  let activeFame = "big";
 
-  // обновление списка на основе текущей категории, подкатегории и поиска
   function updateLists() {
     const query = searchInput.value.trim().toLowerCase();
     const lists = document.querySelectorAll(".list");
@@ -888,13 +897,14 @@ document.addEventListener("DOMContentLoaded", () => {
 
     lists.forEach((list) => {
       const parent = list.dataset.parent;
-      const fame = list.dataset.fame;
+      const fame = list.dataset.fame || null;
+
       const isFameCategory = activeMain === "fame";
       const matchesMain = parent === activeMain;
       const matchesFame = fame === activeFame;
 
-      // показывать список только если он принадлежит активной категории
       let showList = false;
+
       if (isFameCategory && matchesMain && matchesFame) {
         showList = true;
       } else if (!isFameCategory && matchesMain) {
@@ -922,28 +932,17 @@ document.addEventListener("DOMContentLoaded", () => {
         }
       });
 
-      if (visibleCount > 0) {
-        list.style.display = "block";
-      } else {
-        list.style.display = "none";
-      }
-
+      list.style.display = visibleCount > 0 ? "block" : "none";
       totalVisible += visibleCount;
     });
 
-    // обновить инфо строку
-    if (query !== "") {
-      if (totalVisible > 0) {
-        searchInfo.textContent = `Найдено результатов: ${totalVisible}`;
-      } else {
-        searchInfo.textContent = "Ничего не найдено";
-      }
-    } else {
-      searchInfo.textContent = "";
-    }
+    searchInfo.textContent = query
+      ? totalVisible > 0
+        ? `Найдено результатов: ${totalVisible}`
+        : "Ничего не найдено"
+      : "";
   }
 
-  // обработка переключения главных вкладок
   tabsMain.forEach((btn) => {
     btn.addEventListener("click", () => {
       const target = btn.dataset.main;
@@ -952,18 +951,15 @@ document.addEventListener("DOMContentLoaded", () => {
       activeMain = target;
       activeFame = "big";
 
-      // стили кнопок
       tabsMain.forEach((b) => b.classList.remove("active"));
       btn.classList.add("active");
 
-      // показать/скрыть подкатегории
       fameTabsWrapper.style.display = target === "fame" ? "flex" : "none";
 
       fameTabs.forEach((f, i) => {
         f.classList.toggle("active", i === 0);
       });
 
-      // сброс поиска
       searchInput.value = "";
       searchInfo.textContent = "";
 
@@ -971,7 +967,6 @@ document.addEventListener("DOMContentLoaded", () => {
     });
   });
 
-  // обработка кликов по подкатегориям
   fameTabs.forEach((btn) => {
     btn.addEventListener("click", () => {
       const fame = btn.dataset.fame;
@@ -986,10 +981,8 @@ document.addEventListener("DOMContentLoaded", () => {
     });
   });
 
-  // поиск
   searchInput.addEventListener("input", updateLists);
 
-  // начальная отрисовка
   if (activeMain === "fame") {
     fameTabsWrapper.style.display = "flex";
   } else {
@@ -998,6 +991,7 @@ document.addEventListener("DOMContentLoaded", () => {
 
   updateLists();
 });
+
 
     const style = document.createElement("style");
     style.textContent = `
